--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
 
   <xml id="toolbox" style="display: none">
-    <category name="pi">
+    <category colour="210" name="树莓派">
       <block type="alphabet"></block>
       <block type="beep"></block>
       <block type="say"></block>
@@ -149,7 +149,7 @@
 </div><!--end col-md-6-->
   <div class="col-md-6">
    <divi id="code_playgroud">
-    code_playgroud
+   <h1>Code Generator  </h1>
    </div>
   </div>
 </div> <!--end row-->
