添加超声测距和time sleep功能

--- a/blockly4pi.html
+++ b/blockly4pi.html
@@ -72,6 +72,8 @@
       <block type="say"></block>
       <block type="train_your_ai"></block>
       <block type="talk_with_ai"></block>
+      <block type="get_distance"></block>
+      <block type="time_sleep"></block>
     </category>
     </category>
     <category name="Logic">
