添加报警模块（邮件）

--- a/blockly4pi.html
+++ b/blockly4pi.html
@@ -74,16 +74,17 @@
       <block type="talk_with_ai"></block>
       <block type="get_distance"></block>
       <block type="time_sleep"></block>
+      <block type="send_email"></block>
     </category>
     </category>
-    <category name="Logic">
+    <category name="逻辑">
       <block type="controls_if"></block>
       <block type="logic_compare"></block>
       <block type="logic_operation"></block>
       <block type="logic_negate"></block>
       <block type="logic_boolean"></block>
     </category>
-    <category name="Loops">
+    <category name="循环">
       <block type="controls_repeat_ext">
         <value name="TIMES">
           <block type="math_number">
@@ -93,12 +94,12 @@
       </block>
       <block type="controls_whileUntil"></block>
     </category>
-    <category name="Math">
+    <category name="数学">
       <block type="math_number"></block>
       <block type="math_arithmetic"></block>
       <block type="math_single"></block>
     </category>
-    <category name="Text">
+    <category name="文本">
       <block type="text"></block>
       <block type="text_length"></block>
       <block type="text_print"></block>
