--- a/blockly4pi.html
+++ b/blockly4pi.html
@@ -13,7 +13,7 @@
 
   <!--alert plugin-->
   <link rel="stylesheet" href="http://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.css" type="text/css" media="all" />
-  <script src="http://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
+  <script src="http://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script> 
   
 
   <!--
@@ -23,13 +23,17 @@
   -->
   <!--bootstrap-->
   <link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <!--<script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+  <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+  <script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script><!--需要jquery-->
 
   <!--CodeMirror-->
   <link href="http://cdn.bootcss.com/codemirror/5.19.0/codemirror.css" rel="stylesheet">
   <script src="http://cdn.bootcss.com/codemirror/5.19.0/codemirror.js"></script>
   <link href="http://cdn.bootcss.com/codemirror/5.19.0/theme/solarized.min.css" rel="stylesheet">
   <script src="http://cdn.bootcss.com/codemirror/5.19.0/mode/python/python.min.js"></script>
+
+  <!--arttemplate-->
+  <script src="http://ocfy0072v.bkt.clouddn.com/template.js"></script>
 
   <style>
     body {
@@ -64,7 +68,7 @@
   <!--help:ping  raspberrypi.local-->
   </form>
 
-  <div  id="blocklyDiv" style="height: 480px; width: 600px;"></div>
+  <div  id="blocklyDiv" style="height: 600px; width: 100%;" ></div>
 
   <xml id="toolbox" style="display: none">
     <category colour="210" name="传感器">
@@ -157,12 +161,19 @@
       </statement>
     </block>
   </xml>
-</div><!--end col-md-6-->
+  </div><!--end col-md-6-->
   <div class="col-md-6">
-   <divi id="code_playgroud">
+   <div id="code_playgroud">
    <h1>Code Generator  </h1>
    </div>
-  </div>
+
+   <div id="mytools">
+     <!--使用模板引擎： https://github.com/aui/artTemplate/blob/master/demo/basic.html
+     http://ocfy0072v.bkt.clouddn.com/template.js
+     es6原生模板字符串 `` ，没有for
+     --> 
+   </div>
+  </div> <!--end col-md-6-->
 </div> <!--end row-->
 
   <script>
@@ -255,6 +266,7 @@ function  check_pi_access(){
   </script>
 
   <script type="text/javascript" charset="utf-8">
+//代码编辑器
 myCodeMirror = CodeMirror(document.getElementById("code_playgroud"), {
     lineNumbers: true,
     styleActiveLine: true,
@@ -264,5 +276,7 @@ myCodeMirror = CodeMirror(document.getElementById("code_playgroud"), {
 var theme="solarized dark";
 myCodeMirror.setOption("theme", theme);
   </script>
+
+  <script src="tools_template.js"></script> <!--本地模板-->
 </body>
 </html>
