优化本地ai，提高响应速度

--- a/blockly4pi.html
+++ b/blockly4pi.html
@@ -68,7 +68,7 @@
   <!--help:ping  raspberrypi.local-->
   </form>
 
-  <div  id="blocklyDiv" style="height: 600px; width: 100%;" ></div>
+  <div  id="blocklyDiv" style="height: 400px; width: 600;" ></div>
 
   <xml id="toolbox" style="display: none">
     <category colour="210" name="传感器">
