完成录音和播音的blockly部分

--- a/blockly4pi.html
+++ b/blockly4pi.html
@@ -74,6 +74,8 @@
     <category colour="210" name="传感器">
       <block type="alphabet"></block>
       <block type="beep"></block>
+      <block type="play_record"></block>
+      <block type="sox_record"></block>
       <block type="say"></block>
       <block type="get_distance"></block>
       <block type="time_sleep"></block>
@@ -236,7 +238,7 @@
       //var code = myCodeMirror.getValue();
       console.log(code);
       //设置按钮：document.getElementById("myBtn").disabled = true;
-      document.getElementById("runCode").disabled = true;
+      //document.getElementById("runCode").disabled = true;
       wwjtest(code);
       //1+5加号会没掉
       //alert(code);
