--- a/blockly4pi.html
+++ b/blockly4pi.html
@@ -7,6 +7,8 @@
   <script src="blocks_compressed.js"></script>
   <script src="python_compressed.js"></script>
   <script src="zh-hans.js"></script>
+  <script src="storage.js"></script>
+  
 
   <!--pi core-->
   <script src="blocks.js"></script>
@@ -73,12 +75,18 @@
   <xml id="toolbox" style="display: none">
     <category colour="210" name="传感器">
       <block type="alphabet"></block>
+      <block type="get_distance"></block>
+    </category>
+    <category colour="230" name="系统功能">
+      <block type="time_sleep"></block>
+    </category>
+    <category name="输入输出">
       <block type="beep"></block>
       <block type="play_record"></block>
       <block type="sox_record"></block>
       <block type="say"></block>
-      <block type="get_distance"></block>
-      <block type="time_sleep"></block>
+    </category>
+    <category name="网络">
       <block type="send_email"></block>
     </category>
     <category name="人工智能">
@@ -113,9 +121,12 @@
       <block type="text_length"></block>
       <block type="text_print"></block>
     </category>
+    <!--view-source:https://blockly-demo.appspot.com/static/demos/code/index.html-->
+    <category name="变量" colour="330" custom="VARIABLE"></category>
+    <category name="函数" colour="290" custom="PROCEDURE"></category> <!--{catFunctions}国际化:{}-->
   </xml>
 
-  <xml id="startBlocks" style="display: none">
+  <xml id="startBlocks" style="display: none"> <!--初始化的模块-->
     <block type="controls_if" inline="false" x="20" y="20">
       <mutation else="1"></mutation>
       <value name="IF0">
@@ -178,19 +189,25 @@
   </div> <!--end col-md-6-->
 </div> <!--end row-->
 
-  <script>
-    var workspace = Blockly.inject('blocklyDiv',
+<script>
+//初始化blockly
+var workspace = Blockly.inject('blocklyDiv',
         {media: '../../media/',
          toolbox: document.getElementById('toolbox')});
-    Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'),
-                               workspace);
+//Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'),workspace);// 初始化的块,手写出来的有没有可能console.log 手写出来，放到区域里
+//这个方法以及把使用方法说尽,从云端拉下来的，放到本地空间或者预览
+//如何生成xml
+//document.getElementById('toolbox')
 
-    function wwjtest(code) {
+window.setTimeout(BlocklyStorage.restoreBlocks, 0);
+BlocklyStorage.backupOnUnload(); // listener on the page's unload event
+
+function wwjtest(code) {
       var ip = document.getElementById('pi_ip').value; //需要一个总的开始，填入ip
       var blockly_server = `http://${ip}:5000/run`; //run
       //code_base64 = window.btoa(unescape(encodeURIComponent( code )))
       code_base64 = code
-      xmlhttp=new XMLHttpRequest();
+      xmlhttp=new XMLHttpRequest();  //重构为fetch
       xmlhttp.timeout = 8000;//10秒 //异步才有
       xmlhttp.ontimeout = function (e) {
         swal('请求超时')
@@ -208,15 +225,9 @@
       xmlhttp.open("POST",blockly_server,true);//异步,同步是false
       xmlhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
       xmlhttp.send(JSON.stringify({key:"test",code:code_base64}));
-      //弹出执行成功 
-      
-      //es6
-      // var name = "wwj";
-      //console.log(`hi, ${name}!`);
     }//end wwjtest
 
-
-    function showCode() {
+function showCode() {
       // Generate JavaScript code and display it.
       Blockly.Python.INFINITE_LOOP_TRAP = null;
       var code = Blockly.Python.workspaceToCode(workspace);
@@ -228,12 +239,11 @@
       //swal(code);
     }
 
-    function runCode() {
+function runCode() {
       // Generate JavaScript code and run it.
       // 发送到硬件里
       Blockly.Python.INFINITE_LOOP_TRAP = null;
       //get code from code code_playgroud
-      
       var code = Blockly.Python.workspaceToCode(workspace);
       //var code = myCodeMirror.getValue();
       console.log(code);
@@ -262,12 +272,9 @@ function  check_pi_access(){
       xmlhttp.open("GET",blockly_server,true);//异步,同步是false
       xmlhttp.send();
 }
-  
+</script>
 
-
-  </script>
-
-  <script type="text/javascript" charset="utf-8">
+<script type="text/javascript" charset="utf-8">
 //代码编辑器
 myCodeMirror = CodeMirror(document.getElementById("code_playgroud"), {
     lineNumbers: true,
@@ -277,8 +284,8 @@ myCodeMirror = CodeMirror(document.getElementById("code_playgroud"), {
 }); //全局
 var theme="solarized dark";
 myCodeMirror.setOption("theme", theme);
-  </script>
+</script>
 
-  <script src="tools_template.js"></script> <!--本地模板-->
+<script src="tools_template.js"></script> <!--本地模板-->
 </body>
 </html>
