完成红外信号的录制和发射

--- a/blockly4pi.html
+++ b/blockly4pi.html
@@ -76,6 +76,8 @@
     <category colour="210" name="传感器">
       <block type="alphabet"></block>
       <block type="get_distance"></block>
+      <block type="infrared_record"></block>
+      <block type="infrared_send"></block>
     </category>
     <category colour="230" name="系统功能">
       <block type="time_sleep"></block>
