--- a/blockly4pi.html
+++ b/blockly4pi.html
@@ -27,7 +27,8 @@
   <link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
   <script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script><!--需要jquery-->
-
+  <!--模态框组件 简化bs的模态框-->
+    <script src="http://cdn.bootcss.com/bootbox.js/4.4.0/bootbox.min.js"></script> <!--jquery 大于1.9.1-->
   <!--CodeMirror-->
   <link href="http://cdn.bootcss.com/codemirror/5.19.0/codemirror.css" rel="stylesheet">
   <script src="http://cdn.bootcss.com/codemirror/5.19.0/codemirror.js"></script>
@@ -192,6 +193,8 @@
      es6原生模板字符串 `` ，没有for
      --> 
    </div>
+
+   <div id="cloud_button_group"> </div> <!--云端按钮组锚点-->
   </div> <!--end col-md-6-->
 </div> <!--end row-->
 
@@ -315,72 +318,9 @@ myCodeMirror.setOption("theme", theme);
 
 <script src="tools_template.js"></script> <!--本地模板-->
 
-
-<script type="text/javascript" charset="utf-8">
-//kinto-http.js
-function kinto_init(){
-var username = "pi"
-var password = "pi"
-var ip = document.getElementById('pi_ip').value;
-const secretString = `${username}:${password}`;
-const kinto_client = new KintoClient(`http://${ip}:8888/v1`, {
-        headers: {Authorization: "Basic " + btoa(secretString)}
-});
-return kinto_client
-
-//blockly  gist
-//usege
-// kinto_client = kinto_init()
-//create
-// gist = kinto_client.bucket("blockly").collection("gist")
-// gist.createRecord({title: "My first post", content: "Hello World!"})
-//get
-// gist.listRecords().then(result => console(result.data));
-  }
-
-function create_gist(){
-  //获得xml_text
-  var xml_text = get_xml_text();
-  var kinto_client = kinto_init();
-  var gist = kinto_client.bucket("blockly").collection("gist");
-  gist.createRecord({title: "mytest1", content: xml_text});
-}
-
-function list_gist(handle){ //show_gists
-  //获得xml_text
-  var xml_text = get_xml_text();
-  var kinto_client = kinto_init();
-  var gist = kinto_client.bucket("blockly").collection("gist");
-  gist.listRecords().then(result => handle(result.data)); //基于事件，而不是序列
-}
-
-function show_gists(gists){
-for(let item of gists) {
-  console.log(item)
-}
-}
-
-function lastest_gist_insert(gists){
-  //最新的
-  content = gists[0].content;
-  //console.log(gists[0].content)  //sort: The order field (default: -last_modified)
-  set_workspace(content);
-}
-
-$("#gist_share").click(function(event){
-event.preventDefault();
-create_gist();
-swal("分享成功")
-})
-
-$("#get_gist_lastest").click(function(event){
-event.preventDefault();
-list_gist(lastest_gist_insert);
-})
+<script src="cloud_gist.js"></script> <!--本地模板-->
 
 
-
-</script>
 
 </body>
 </html>
